feat: home page

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "NODE_ENV=production next build",
+    "dev": "NODE_ENV=development next",
+    "start": "next start -p $PORT",
+    "postinstall": "npx install-types"
   },
   "repository": {
     "type": "git",
@@ -16,5 +19,17 @@
   "bugs": {
     "url": "https://github.com/Konfigure-org/konfigure/issues"
   },
-  "homepage": "https://github.com/Konfigure-org/konfigure#readme"
+  "homepage": "https://github.com/Konfigure-org/konfigure#readme",
+  "dependencies": {
+    "next": "^9.4.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.38",
+    "install-types": "^2.0.1",
+    "typescript": "^3.9.5"
+  }
 }
