--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.38",
+    "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.0",
     "install-types": "^2.0.1",
     "typescript": "^3.9.5"
   }
