feat: custom express server

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production next build",
-    "dev": "NODE_ENV=development next",
-    "start": "next start -p $PORT",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "dev": "nodemon",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
     "postinstall": "npx install-types"
   },
   "repository": {
@@ -21,17 +21,21 @@
   },
   "homepage": "https://github.com/Konfigure-org/konfigure#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.6",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.0",
     "install-types": "^2.0.1",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
   }
 }
