--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "reflexbox": "^4.0.6",
     "styled-components": "^5.1.1"
   },
