--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/less": "^3.0.1",
     "@types/node": "^14.0.13",
+    "@types/nodemon": "^1.19.0",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.0.0",
+    "@types/reflexbox": "^4.0.1",
     "@types/styled-components": "^5.1.0",
     "@zeit/next-less": "^1.0.1",
     "install-types": "^2.0.1",
